# 00-Fundamentos-do-Python

./: .gitignore  README.md  pyproject.toml
01/: crescimento.py  main.py
02/: main.py
03/: main.py
04/: bomba_combustivel.py
05/: palindromo.py
