[tool.poetry]
name = "projetos-iniciantes"
version = "0.1.0"
description = "Bunch of simple projects created for practice put together."
authors = ["Felipe Antonio <felipe.antonio.online@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
